--- a/backend/package.json
+++ b/backend/package.json
@@ -10,12 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.8.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.0",
+    "prisma": "^5.8.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
