--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,3 +8,5 @@ PORT=3000
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+JWT_SECRET="secret_key"
+JWT_REFRESH_SECRET="secret_key"
