--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^20.11.0",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.0",
+    "@types/swagger-jsdoc": "^6.0.4",
     "prisma": "^5.8.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
