--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "npx ts-node-dev src/index.ts"
+    "dev": "npx ts-node-dev src/index.ts",
+    "test": "jest ./src/tests"
   },
   "keywords": [],
   "author": "",
@@ -21,14 +22,19 @@
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.0",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.0",
     "@types/swagger-jsdoc": "^6.0.4",
+    "jest": "^29.7.0",
     "prisma": "^5.8.0",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
